force-app/main/default/objects/Historial_de_Vacunacion__c/Historial_de_Vacunacion__c.object-meta.xml
<CustomObject>
    <label>Historial de Vacunación</label>
    <nameField>
        <displayFormat>Vacuna-{0000}</displayFormat>
        <label>Historial de Vacunación Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiales de Vacunación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>