force-app/main/default/objects/Historial_de_Vacunacion__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Fecha en que se realizó la vacunación de la mascota</description>
    <inlineHelpText>Indique la fecha en que se administró la vacunación</inlineHelpText>
    <label>Fecha</label>
    <required>true</required>
    <type>Date</type>
</CustomField>