force-app/main/default/objects/Historial_de_Vacunacion__c/fields/Lugar__c.field-meta.xml
<CustomField>
    <fullName>Lugar__c</fullName>
    <description>Lugar donde se administró la vacuna</description>
    <inlineHelpText>Indique el lugar donde se administró la vacuna a la mascota</inlineHelpText>
    <label>Lugar</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>