force-app/main/default/objects/Historial_de_Vacunacion__c/fields/Mascota__c.field-meta.xml
<CustomField>
    <fullName>Mascota__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mascota</label>
    <referenceTo>Mascota__c</referenceTo>
    <relationshipLabel>Historiales de Vacunación</relationshipLabel>
    <relationshipName>Historiales_de_Vacunacion</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>